[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/autoloads/settings.gd" type="Script" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
margin_top = 41.0
margin_right = 504.0
margin_bottom = 55.0
text = "Settings"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 59.0
margin_right = 504.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Fullscreen"

[node name="Fullscreen" type="CheckBox" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 87.0
margin_right = 504.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Borderless"

[node name="Borderless" type="CheckBox" parent="PopupPanel/VBoxContainer/HBoxContainer4"]
margin_left = 73.0
margin_right = 97.0
margin_bottom = 24.0

[node name="HBoxContainer6" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 115.0
margin_right = 504.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "VSync"

[node name="VSync" type="CheckBox" parent="PopupPanel/VBoxContainer/HBoxContainer6"]
margin_left = 41.0
margin_right = 65.0
margin_bottom = 24.0
pressed = true

[node name="HBoxContainer5" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 143.0
margin_right = 504.0
margin_bottom = 163.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer5"]
margin_top = 3.0
margin_right = 89.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Brightness"

[node name="Brightness" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer5"]
margin_left = 93.0
margin_right = 451.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 8.0
step = 0.01
value = 1.0

[node name="BrightnessReset" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer5"]
margin_left = 455.0
margin_right = 503.0
margin_bottom = 20.0
text = "Reset"

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 167.0
margin_right = 504.0
margin_bottom = 183.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Sound"

[node name="Sound" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer2"]
margin_left = 104.0
margin_right = 504.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 187.0
margin_right = 504.0
margin_bottom = 203.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="PopupPanel/VBoxContainer/HBoxContainer3"]
margin_left = 104.0
margin_right = 504.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Keybinds" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 207.0
margin_right = 504.0
margin_bottom = 227.0
text = "Keybinds"

[node name="Quit" type="Button" parent="PopupPanel/VBoxContainer"]
margin_top = 231.0
margin_right = 504.0
margin_bottom = 251.0
text = "Quit to Title"

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="toggled" from="PopupPanel/VBoxContainer/HBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="PopupPanel/VBoxContainer/HBoxContainer4/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="toggled" from="PopupPanel/VBoxContainer/HBoxContainer6/VSync" to="." method="_on_VSync_toggled"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer5/Brightness" to="." method="_on_Brightness_value_changed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/HBoxContainer5/BrightnessReset" to="." method="_on_BrightnessReset_pressed"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer2/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/HBoxContainer3/Music" to="." method="_on_Music_value_changed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Keybinds" to="." method="_on_Keybinds_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
